# 30mins-python

./: .gitignore  README.md  pyproject copy.toml  pyproject.toml
.devcontainer/: environment.yml
docs/erupts-web/download/使用文档（Latest）/: Linq.J对象查询语言.md  V1.12.x.md  index.md  progress.json  ⚙️参数配置.md  ⛓架构图.md  入门示例.md  加入讨论.md  字段注EruptField.md  常见问题FAQ.md  快速部署.md  捐赠指南.md  数据源支持.md  更新日志.md  权限管理.md  框架介绍.md  热构建（修改注解无需重启）.md  贡献指南.md
docs/erupts-web/download/使用文档（Latest）/erupt整理笔记/: Erupt中Querydsl例子.md  Erupt整理笔记(1.10.X版).md  JPA自定义雪花算法ID生成器详解.md  index.md  白石-Erupt整理笔记(1.9.X版).md
docs/erupts-web/download/使用文档（Latest）/☁️Erupt-Cloud（分布式能力）/: 入门：通用云配置管理中台.md  开发：配置node节点，可视化集群内任意服务.md  部署：erupt-cloud-node（微节点）.md  部署：erupt-cloud-server（服务端）.md
docs/erupts-web/download/使用文档（Latest）/⭐️数据组件→EditType/: 一对一新增COMBINE（支持JSON字段存储）.md  一对多新增TAB_TABLE_ADD（支持JSON字段存储）.md  代码编辑器CODE_EDITOR.md  (+22 more)
docs/itermedia/: metaclass.md
docs/lessons/revisited/1-setup/: jupterlan-setup.md
docs/revisited_lessons/r_chatgpt_qa/ai_generators/: constants.py
docs/revisited_lessons/r_chatgpt_qa/figma_llm/: llm_chains.py  prompts.py
docs/revisited_lessons/r_chatgpt_qa/prompts/: figma.md
docs/revisited_lessons/r_meta/metaclass_all/: re_meta_decorator.py  revisited_metaclass.py
docs/topics/: basic.md  json-one-page.md
docs/topics/pdf/: chats.md
notes/: notes_parser.py
r_notes/: notes_parser.py
r_notes/pandas/: tabular_data.ipynb
revisited_lessons/r_chatgpt_qa/figma_llm/: loader.py
revisited_lessons/r_chatgpt_qa/prompts/: pomptlayer_demos.py
revisited_lessons/r_pandas/: user.xlsx
revisited_lessons/r_scrap/: yueque_md.py
revisited_lessons/r_workflow/: __init__.py
src/handson_ai/services/guard_rail/: api.py  prompts.py
src/handson_ai/ui/: langchain_agent_ui.py  langchain_chat_ui.py  langchain_open_chat.py  openai_chat_ui.py
src/revisited/r_code_structure/: service_caller.py
src/spells/: Logo.py  notes_parser.py
src/spells/db/: database.py  models.py
src/spells/iceshell/models/: dellib.py  downlib.py  models.py
src/spells/iceshell/tools/: Phraser.py  SelfCheck.py
src/spells/proxyway/: README.md
tests/spell/: test_color.py
(+52 files in other folders)
